--- a/style.css
+++ b/style.css
@@ -646,10 +646,55 @@ img {
 
 }
 
-.package{
-  
+
+/* lorem */
+
+.package_wrapper h2 {
+  color: var(--clr-primary);
+  font-size: 6rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 3rem;
+  display: flex;
+  font-display: column;
+  justify-content: center;
+}
+.package_theme {
+  padding: 5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
+.package_left {
+  width: 500rem;
+  margin-left: 20rem;
+  margin-top: 5rem;
+}
+
+.package_left img {
+  width: 50rem;
+  height: 35rem;
+  
+}
+.package_right h2 {
+  color: var(--clr-primary);
+  display: flex;
+  font-size: 6rem;
+  font-weight: 700;
+  text-align: center;
+  margin-left: 6rem;
+  height: -20px;
+}
+.package_right p {
+  font-size: 2rem;
+  line-height: 2.5rem;
+  text-align: justify;
+}
+.package_theme:nth-child(odd) {
+  background-color: var(--clr-semilight);
+  flex-direction: row-reverse;
+  display: flex;
+} 
 
 /* Repeatable */
 .btn{
